added laos, moved from ipynb to spyder file

--- a/folium.ipynb
+++ b/folium.ipynb
@@ -20,6 +20,8 @@
     }
    ],
    "source": [
+    "#THIS IS JUST FOR TEST VISUALIZING. CHANGE CODE IN THE JSON PARSER.PY FILE\n",
+    "\n",
     "import folium\n",
     "import subprocess\n",
     "import webbrowser\n",
